--- a/QTMessenger/InterfaceLogin.ui
+++ b/QTMessenger/InterfaceLogin.ui
@@ -36,7 +36,7 @@
     <item row="0" column="1">
      <spacer name="verticalSpacer_2">
       <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
+       <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -49,7 +49,7 @@
     <item row="1" column="0">
      <spacer name="horizontalSpacer">
       <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
+       <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -62,7 +62,7 @@
     <item row="1" column="2">
      <spacer name="horizontalSpacer_2">
       <property name="orientation">
-       <enum>Qt::Orientation::Horizontal</enum>
+       <enum>Qt::Horizontal</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -75,7 +75,7 @@
     <item row="2" column="1">
      <spacer name="verticalSpacer_3">
       <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
+       <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -88,7 +88,7 @@
     <item row="1" column="1">
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="currentIndex">
-       <number>0</number>
+       <number>1</number>
       </property>
       <widget class="QWidget" name="page">
        <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -98,7 +98,7 @@
            <number>0</number>
           </property>
           <property name="sizeConstraint">
-           <enum>QLayout::SizeConstraint::SetDefaultConstraint</enum>
+           <enum>QLayout::SetDefaultConstraint</enum>
           </property>
           <property name="leftMargin">
            <number>0</number>
@@ -158,7 +158,7 @@ border: none; /* Убираем границу */</string>
             <item>
              <spacer name="verticalSpacer">
               <property name="orientation">
-               <enum>Qt::Orientation::Vertical</enum>
+               <enum>Qt::Vertical</enum>
               </property>
               <property name="sizeHint" stdset="0">
                <size>
@@ -190,25 +190,25 @@ border: none; /* Убираем границу */</string>
             <item row="1" column="1">
              <widget class="QLineEdit" name="lineEdit_regNick"/>
             </item>
-            <item row="2" column="0">
+            <item row="3" column="0">
              <widget class="QLabel" name="label_regPass">
               <property name="text">
                <string>Пароль:</string>
               </property>
              </widget>
             </item>
-            <item row="2" column="1">
+            <item row="3" column="1">
              <widget class="QLineEdit" name="lineEdit_regPass"/>
             </item>
-            <item row="0" column="0">
-             <widget class="QLabel" name="label">
+            <item row="2" column="0">
+             <widget class="QLabel" name="label_regTelephone">
               <property name="text">
                <string>Номер:</string>
               </property>
              </widget>
             </item>
-            <item row="0" column="1">
-             <widget class="QLineEdit" name="lineEdit_regTel"/>
+            <item row="2" column="1">
+             <widget class="QLineEdit" name="lineEdit_regTelephone"/>
             </item>
            </layout>
           </item>
@@ -219,12 +219,19 @@ border: none; /* Убираем границу */</string>
             </property>
            </widget>
           </item>
+          <item>
+           <widget class="QPushButton" name="pushButton_back">
+            <property name="text">
+             <string>Вернуться</string>
+            </property>
+           </widget>
+          </item>
          </layout>
         </item>
         <item>
          <spacer name="verticalSpacer_4">
           <property name="orientation">
-           <enum>Qt::Orientation::Vertical</enum>
+           <enum>Qt::Vertical</enum>
           </property>
           <property name="sizeHint" stdset="0">
            <size>
@@ -246,7 +253,7 @@ border: none; /* Убираем границу */</string>
      <x>0</x>
      <y>0</y>
      <width>550</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
