--- a/QTMessenger/InterfaceWindow.ui
+++ b/QTMessenger/InterfaceWindow.ui
@@ -36,83 +36,72 @@
        <number>3</number>
       </property>
       <widget class="QWidget" name="page">
-       <widget class="QLineEdit" name="lineEdit_userName">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>20</y>
-          <width>412</width>
-          <height>24</height>
-         </rect>
+       <layout class="QVBoxLayout" name="verticalLayout">
+        <property name="spacing">
+         <number>3</number>
         </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_add">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>50</y>
-          <width>412</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Создать</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_writeMessage">
-        <property name="geometry">
-         <rect>
-          <x>0</x>
-          <y>80</y>
-          <width>412</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Написать</string>
-        </property>
-       </widget>
+        <item>
+         <widget class="QLineEdit" name="lineEdit_userName"/>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_add">
+          <property name="text">
+           <string>Создать</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_writeMessage">
+          <property name="text">
+           <string>Написать</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <widget class="QListWidget" name="listWidget_formChats"/>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="page_2">
-       <widget class="QPushButton" name="pushButton_createGroup">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>30</y>
-          <width>131</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Создать группу</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_newContact">
-        <property name="geometry">
-         <rect>
-          <x>20</x>
-          <y>60</y>
-          <width>111</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Новый контакт</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_backToMainWindow">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>0</y>
-          <width>80</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>&lt;-</string>
-        </property>
-       </widget>
+       <layout class="QGridLayout" name="gridLayout">
+        <item row="3" column="0">
+         <widget class="QPushButton" name="pushButton_createGroup">
+          <property name="text">
+           <string>Создать группу</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QPushButton" name="pushButton_backToMainWindow">
+          <property name="text">
+           <string>&lt;-</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="1">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="4" column="0">
+         <widget class="QPushButton" name="pushButton_newContact">
+          <property name="text">
+           <string>Новый контакт</string>
+          </property>
+         </widget>
+        </item>
+        <item row="5" column="0" colspan="2">
+         <widget class="QListWidget" name="listWidget_formContact"/>
+        </item>
+       </layout>
       </widget>
       <widget class="QWidget" name="page_3">
        <widget class="QLineEdit" name="lineEdit_groupChatName">
@@ -166,94 +155,86 @@
        </widget>
       </widget>
       <widget class="QWidget" name="page_4">
-       <widget class="QLineEdit" name="lineEdit">
-        <property name="enabled">
-         <bool>false</bool>
-        </property>
-        <property name="geometry">
-         <rect>
-          <x>30</x>
-          <y>50</y>
-          <width>351</width>
-          <height>31</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Новый контакт</string>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_3">
-        <property name="geometry">
-         <rect>
-          <x>40</x>
-          <y>130</y>
-          <width>101</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Номер телефона:</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_telephoneNumber">
-        <property name="geometry">
-         <rect>
-          <x>140</x>
-          <y>130</y>
-          <width>113</width>
-          <height>24</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QLabel" name="label_4">
-        <property name="geometry">
-         <rect>
-          <x>40</x>
-          <y>100</y>
-          <width>49</width>
-          <height>21</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>НИК:</string>
-        </property>
-       </widget>
-       <widget class="QLineEdit" name="lineEdit_Nick">
-        <property name="geometry">
-         <rect>
-          <x>80</x>
-          <y>100</y>
-          <width>113</width>
-          <height>24</height>
-         </rect>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_CreateContact">
-        <property name="geometry">
-         <rect>
-          <x>60</x>
-          <y>170</y>
-          <width>251</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>Создать контакт</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_returnToPageCreateContact">
-        <property name="geometry">
-         <rect>
-          <x>10</x>
-          <y>10</y>
-          <width>80</width>
-          <height>24</height>
-         </rect>
-        </property>
-        <property name="text">
-         <string>&lt;-</string>
-        </property>
-       </widget>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <layout class="QHBoxLayout" name="horizontalLayout">
+          <item>
+           <widget class="QPushButton" name="pushButton_returnToPageCreateContact">
+            <property name="text">
+             <string>&lt;-</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer_2">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QLineEdit" name="lineEdit">
+          <property name="enabled">
+           <bool>false</bool>
+          </property>
+          <property name="text">
+           <string>Новый контакт</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <layout class="QFormLayout" name="formLayout">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>НИК:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLineEdit" name="lineEdit_Nick"/>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_3">
+            <property name="text">
+             <string>Номер телефона:</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1">
+           <widget class="QLineEdit" name="lineEdit_telephoneNumber"/>
+          </item>
+         </layout>
+        </item>
+        <item>
+         <widget class="QPushButton" name="pushButton_CreateContact">
+          <property name="text">
+           <string>Создать контакт</string>
+          </property>
+         </widget>
+        </item>
+        <item>
+         <spacer name="verticalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>20</width>
+            <height>40</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
@@ -265,7 +246,7 @@
      <x>0</x>
      <y>0</y>
      <width>430</width>
-     <height>21</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
